(lang dune 3.5)

(name plti_semantics)

(generate_opam_files true)

(source
 (github PerpetualOwl/plti-semantics))

(authors "Howard Huang")

(maintainers "Howard Huang")

(license LICENSE)

(package
 (name plti_semantics)
 (synopsis "Assigment 1")
 (description "Assignment 1 implementation for PLTI (CS2520R)")
 (depends ocaml dune)
)
